update - projects.html, CSS and SCSS

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     </header>    
     <main>       
         <div class="container-fluid container-main">
-                <img src="img/profile-pic-sq.jpg" alt="profile-photo"> 
+                <img src="img/profile-pic-sq.jpg" alt="profile-photo" id="profile-photo"> 
                 <h1 class="name"><span>Hi!</span> I'm Germán Roncelli</h1>
                 <h3 class="profession">Social Communicator &amp; Web Developer</h3>
-                <p class="text-photo">I have a bachelor’s degree in Social Communication. I am 27 years old, married, with italian 
+                <p class="text-photo" id="information">I have a bachelor’s degree in Social Communication. I am 27 years old, married, with italian 
                     citizenship, graduated from Juan Agustín Maza University in Mendoza, Argentina. I am also an Announcer and 
                     Journalist, with experience in several positions, working proactively, in teamworks and keen to improve my 
                     abilities.
