--- a/projects.html
+++ b/projects.html
@@ -51,28 +51,38 @@
                 <h3 class="profession">Social Communicator &amp; Web Developer</h3>
             </div>
         </div>
-        <div>
+        <div class="container-projects">
         <div class="container-fluid title-text">
-            <h2>My projects:</h2>
+            <h2>My projects</h2>
         </div>
-            <div class="container-project">
-                <h3>Project1</h3>
-                <img src="#" alt="project1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos id amet non error quam corporis aperiam unde 
-                    praesentium ullam ratione earum, dignissimos magnam expedita quae cumque doloribus at a.</p>
+            <div class="box gallery">
+                <div class="card">
+                    <div class="background">
+                        <img src="img/projects/mockup-edemsa-square.png">
+                    </div>
+                    <a href="#" class="overlay"></a>
+                    <a href="#"><i class="fa fa-desktop"></i></a>
+                    <a class="thumb" href="#">
+                        <div class="info">
+                            <h2>
+                              <a href="#">EDEMSA: Website update &amp; improvements
+                              </a>
+                            </h2>
+                            <div class="foot">
+                              <i class="line"></i>
+                              <span class="date">2017-2021</span>
+                            </div>
+                          </div>
+                    </a>
+                </div>
             </div>
-            <div class="container-project">
-                <h3>Project2</h3>
-                <img src="#" alt="project2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos id amet non error quam corporis aperiam unde 
-                    praesentium ullam ratione earum, dignissimos magnam expedita quae cumque doloribus at a.</p>
-            </div>
-            <div class="container-project">
-                <h3>Project3</h3>
-                <img src="#" alt="project3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos id amet non error quam corporis aperiam unde 
-                    praesentium ullam ratione earum, dignissimos magnam expedita quae cumque doloribus at a.</p>
-            </div>
+
+
+
+
+
+
+
         </div>
         <div class="container-fluid container-education">
             <h2 class="title-text">Experience</h2> <!--Links to company's pages?-->
