added project.html link to edemsa.com

--- a/projects.html
+++ b/projects.html
@@ -61,11 +61,11 @@
                         <img src="img/projects/mockup-edemsa-square.png">
                     </div>
                     <a href="#" class="overlay"></a>
-                    <a href="#"><i class="fa fa-desktop"></i></a>
+                    <a href="#"><i class="fas fa-desktop"></i></a>
                     <a class="thumb" href="#">
                         <div class="info">
                             <h2>
-                              <a href="#">EDEMSA: Website update &amp; improvements
+                              <a href="http://www.edemsa.com/">EDEMSA: Website update &amp; improvements
                               </a>
                             </h2>
                             <div class="foot">
