added new course from USP to education.html

--- a/education.html
+++ b/education.html
@@ -78,6 +78,16 @@
             <h2 class="title-text">Courses and certifications:</h2> <!--Button in each course to view certificate? Maybe in title & image with hover-->
             <div class="container-course-degree">
                 <div>
+                    <a href="https://www.coursera.org/account/accomplishments/certificate/8QA7LTHQEAHF"><img src="img/usp-logo.jpg" alt="Universidade de São Paulo logo"></a>  
+                    <div id="course-title">
+                        <h5>Universidade de São Paulo</h5>
+                        <h3>UX / UI: Fundamentos para o design de interface</h3>
+                    </div> 
+                </div>
+                <p><b>Nov 20'</b> an online non-credit course authorized by Universidade de São Paulo and offered through Coursera.</p>      
+            </div>
+            <div class="container-course-degree">
+                <div>
                     <a href="https://www.coursera.org/account/accomplishments/verify/573VDMD4HL8M"><img src="img/university of london-logo.jpg" alt="University of London logo"></a>  
                     <div id="course-title">
                         <h5>University of London</h5>
