added photo in contact.html and edited styles

--- a/contact.html
+++ b/contact.html
@@ -55,47 +55,17 @@
             <div class="container-fluid title-text">
                 <h2>Contact me!</h2>
             </div>    
-            <form>
-                <fieldset>
                     <h4>Let's talk.</h4>
-                    <br>
-                        <label for="name">Name:</label>
-                        <input type="text" name="name">
-                    <br>
-                        <label for="surname">Surname:</label>
-                        <input type="text" name="surname">
-                    <br>
-                        <label for="email">Email:</label>
-                        <input type="email" name="email">
-                    <br>
-                        <label for="whycontact">Reason for contact:</label>
-                        <select name="whycontact">			
-                            <option>Work</option>
-                            <option>Query</option>
-                            <option>Communication</option>
-                            <option>Web Development</option>
-                            <option>Other</option>
-                        </select>
-                    <br>
-                        <label for="conditions">Do you accept the Terms and conditions?</label>
-                        <input type="checkbox" name="conditions">
-                    <br>
-                        <textarea placeholder="Leave your comment here"></textarea>
-                    <br>
-                        <input type="submit" value="Submit">	
-
-                        <input type="reset" value="Restore answers">        
-                </fieldset>
-            </form>
+                    <img src="img/contactme-photo.jpg" alt="German Roncelli's photo" class="contact-photo">
         </div>
         <div class="container-fluid container-email">
-            <p>Or send me an email:</p>
+            <p>Send me an email:</p>
             <a href="mailto:groncelli@gmail.com"><img src="img/email.png"></a>
-            
         </div>
     </main>
     <footer>
         <div class="container-fluid container-footer">
+            <p>Or write me through my social media:</p>
             <a href="https://github.com/murraywallas"><img src="img/github-logo.png" alt="logoGithub"></a>
             <a href="https://twitter.com/germanroncelli"><img src="img/twitter-logo.png" alt="logoTwitter"></a>
             <a href="https://www.linkedin.com/in/germanroncelli/"><img src="img/linkedin-logo.png" alt="logoLinkedIn"></a>
