--- a/projects.html
+++ b/projects.html
@@ -60,8 +60,8 @@
                     <div class="background">
                         <img src="img/projects/mockup-edemsa-square.png">
                     </div>
-                    <a href="#" class="overlay"></a>
-                    <a href="#"><i class="fas fa-desktop"></i></a>
+                    <a href="http://www.edemsa.com/" class="overlay"></a>
+                    <a href="http://www.edemsa.com/"><i class="fas fa-desktop"></i></a>
                     <a class="thumb" href="#">
                         <div class="info">
                             <h2>
